Home_task_2 theme changing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,6 @@
     <string name="red">Red</string>
     <string name="green">Green</string>
     <string name="blue">Blue</string>
+    <string name="moon_theme">Moon Theme</string>
+    <string name="mars_theme">Mars Theme</string>
 </resources>
