--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="marscuriosity">MarsCuriosity</string>
     <string name="epic">EPIC</string>
     <string name="apod">APOD</string>
+    <string name="layout">Layout</string>
 </resources>
