--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="epic">EPIC</string>
     <string name="apod">APOD</string>
     <string name="layout">Layout</string>
+    <string name="application">Application</string>
 </resources>
