--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,5 @@
     <string name="animate">Animate</string>
     <string name="transitions_example">Transitions example</string>
     <string name="tap_on_me">TAP ON ME</string>
+    <string name="shuffle">SHUFFLE</string>
 </resources>
