--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,5 @@
     <string name="transitions_example">Transitions example</string>
     <string name="tap_on_me">TAP ON ME</string>
     <string name="shuffle">SHUFFLE</string>
+    <string name="danielson_crater">На фото видно камни и песок в кратере Даниэлсона (диаметр кратера около 67 км), расположенного на юго-востоке области Arabia Terra.</string>
 </resources>
