Home_task_6 MoveItemUP and Down

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,5 @@
     <string name="animation">Animation</string>
     <string name="earth_item">Земля</string>
     <string name="additional_text">Дополнительный текст</string>
+    <string name="mars">Марс</string>
 </resources>
