--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,5 +80,9 @@
     <string name="earth_item">Земля</string>
     <string name="additional_text">Дополнительный текст</string>
     <string name="mars">Марс</string>
-    <string name="mars_description">Марс -- четвёртая по удалённости от Солнца и седьмая по размерам планета Солнечной системы. Названа в честь Марса -- древнеримского бога войны, соответствующего древнегреческому Аресу. Иногда Марс называют «красной планетой» из-за красноватого оттенка поверхности, придаваемого ей минералом маггемитом (оксидом железа).</string>
+    <string name="note_description">Note Description</string>
+    <string name="priority">Priority</string>
+    <string name="low_prior_note">Low Prior Note</string>
+    <string name="norm_prior_name">Norm Prior Name</string>
+    <string name="notes">Notes</string>
 </resources>
